--- a/src/acknowledgements.tex
+++ b/src/acknowledgements.tex
@@ -5,6 +5,7 @@
 We would like to express our thanks to the following reviewers and people who have generously offered their time and interest (in alphabetical order):
 
 \begin{multicols}{2}{\parskip=0pt\centering\obeylines%
+Arciszewski, Scott \\
 Brown, Scott \\
 Brulebois, Cyril \\
 Dirksen-Thedens, Mathis \\
